Fixed overflow within modal component

--- a/src/Modal/Modal.module.scss
+++ b/src/Modal/Modal.module.scss
@@ -1,3 +1,9 @@
+@use "../../styles" as shared;
+
 .backdrop:open::backdrop {
     background-color: rgb(0 0 0 / 50%);
+}
+
+.modalBody {
+    @include shared.scrollbars(shared.$white);
 }
